JVM: Make sure the G1GC is used.